- Ask user if he wants absences and grades to be deleted when delete schedule in MassDrops.php & Schedule.php
- Better formatting for Labels in MailingLabels.php & StudentLabels.php
- Responsive table content in UnfilledRequests.php
- Add Help texts + spanish translation in Help_en.php & Help_es.php
- Remove inline CSS, program wide
- Add .student .staff .self .align-right .col1-align-right .bar .relevance CSS classes
- Add .center CSS class for tables
- Add <legend> CSS styling
- Remove "Display data using hidden fields" / HIDDEN Preference option
- Update french & spanish translations
- Session security in Warehouse.php & index.php
- Responsive MultiLanguages inputs in stylesheet.css
- Force School Configuration copy in CopySchool.php
- Set new current school after copy & delete school in CopySchool.php & Schools.php
- Update program according to new School/SchoolYear/CoursePeriod in Side.php
- Force REQUEST vars to POST in Side.php
- remove Schools for Parents in User.php & General_Info.inc.php
- Bugfix save school if unchecked in User.php
- Display school info on page reload after update in Schools.php
- other fields required in Student.php & User.php
- date & select student/user fields, add required attribute when required in Inputs.php & Date.php
- propose to create user in Moodle: if the users have not been rolled yet in Moodle/functions.php
- Move assets/ & locale paths from config.inc.php to Warehouse.php
- Activate links in Events descriptions in Portal.php & Calendar.php
- Check if event is in Moodle before update in Moodle/functions.php
- Display MLTextInput value when PDF or no edit allowed in Inputs.php
- Portal Assignments in Portal.php
- create Linkify() function in ProgramFunctions/Linkify.fnc.php
- Reorganize Report Cards comments display in ReportCards.php
- bugfix ListOutput sorting & remove yscroll LO_option in ListOutput.fnc.php
- Add rollover_warnings action in Actions.php & Moodle/functions.php